--- a/notebook/problems.ipynb
+++ b/notebook/problems.ipynb
@@ -24,12 +24,41 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 1,
+            "execution_count": 16,
             "id": "34720ab6",
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Normal                                          Chi\n",
+                        "___________________________________________________\n",
+                        "-0.1510014587477786              0.7808724936899036\n",
+                        "-0.06084492933387367             0.3826424412630849\n",
+                        "-1.9533334533575253              0.5428150793183735\n",
+                        "4.239405383435648                 5.385732898271256\n",
+                        "0.9708325087947943               0.9616121170208703\n",
+                        "0.9425157601327944                 0.92469786360136\n"
+                    ]
+                }
+            ],
             "source": [
-                "# TODO"
+                "import numpy as np\n",
+                "import statistics as stats\n",
+                "normal = np.random.normal(size=100)\n",
+                "chi = np.random.chisquare(1, size=100)\n",
+                "def rangle(datum):\n",
+                "    return max(datum)-min(datum)\n",
+                "funcs = [stats.mean, stats.median, stats.mode, rangle, np.std, np.var]\n",
+                "se = [normal, chi]\n",
+                "print('Normal                                          Chi')\n",
+                "print('_'*51)\n",
+                "for i in funcs:\n",
+                "    a, b = i(normal), i(chi)\n",
+                "    a_l, b_l = 24-len(str(a)), 24-len(str(b))\n",
+                "    print(a, ' ' * a_l, ' ' * b_l, b)\n",
+                "\n"
             ]
         },
         {
@@ -48,12 +77,31 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 2,
+            "execution_count": 10,
             "id": "d590308e",
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "2.0 2.0\n"
+                    ]
+                }
+            ],
             "source": [
-                "# TODO"
+                "import math\n",
+                "data = [4, 2, 5, 8, 6]\n",
+                "std1 = np.std(data)\n",
+                "def std(datum):\n",
+                "    l = len(datum)\n",
+                "    m = sum(datum)/l\n",
+                "    dev = []\n",
+                "    for i in datum:\n",
+                "        dev.append(abs(m - i)**2)\n",
+                "    return math.sqrt(sum(dev)/l)\n",
+                "std2 = std(data)\n",
+                "print(std1, std2)"
             ]
         }
     ],
