--- a/notebook/problems.ipynb
+++ b/notebook/problems.ipynb
@@ -24,7 +24,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 16,
+            "execution_count": 6,
             "id": "34720ab6",
             "metadata": {},
             "outputs": [
@@ -34,29 +34,35 @@
                     "text": [
                         "Normal                                          Chi\n",
                         "___________________________________________________\n",
-                        "-0.1510014587477786              0.7808724936899036\n",
-                        "-0.06084492933387367             0.3826424412630849\n",
-                        "-1.9533334533575253              0.5428150793183735\n",
-                        "4.239405383435648                 5.385732898271256\n",
-                        "0.9708325087947943               0.9616121170208703\n",
-                        "0.9425157601327944                 0.92469786360136\n"
+                        "0.13940965940742378     Mean         3.0939531695604\n",
+                        "0.1771896727101976     Median     2.3645645278767953\n",
+                        "-1.1990595947263936     Mode       5.013065842366067\n",
+                        "4.825281479442998      Range      13.943179385358194\n",
+                        "1.0997918067145878  Standard Deviation  2.6437038180848536\n",
+                        "1.209542018116537     Variance     6.989169877756432\n",
+                        "-0.06823600798979867    Skew      1.6829627600730432\n",
+                        "-0.6725785116859031   Kurtosis     3.251024697952854\n"
                     ]
                 }
             ],
             "source": [
                 "import numpy as np\n",
                 "import statistics as stats\n",
+                "from scipy.stats import skew, kurtosis\n",
                 "normal = np.random.normal(size=100)\n",
                 "chi = np.random.chisquare(3, size=100)\n",
                 "def rangle(datum):\n",
                 "    return max(datum)-min(datum)\n",
-                "funcs = [stats.mean, stats.median, stats.mode, rangle, np.std, np.var]\n",
+                "funcs = [[stats.mean, 'Mean'], [stats.median, 'Median'], [stats.mode, 'Mode'], [rangle, 'Range'], [stats.stdev, 'Standard Deviation'], [lambda x: stats.stdev(x)**2, 'Variance'], [skew, 'Skew'], [kurtosis, 'Kurtosis']]\n",
                 "print('Normal                                          Chi')\n",
                 "print('_'*51)\n",
                 "for i in funcs:\n",
-                "    a, b = i(normal), i(chi)\n",
-                "    a_l, b_l = 24-len(str(a)), 24-len(str(b))\n",
-                "    print(a, ' ' * a_l, ' ' * b_l, b)\n",
+                "    a, b = i[0](normal), i[0](chi)\n",
+                "    a_l, b_l, l_n = 24-len(str(a)), 24-len(str(b)), len(i[1])/2\n",
+                "    if l_n % 1 == .5:\n",
+                "        print(a, ' ' * (a_l - int(l_n + .5)), i[1], ' ' * (b_l - int(l_n - .5)), b)\n",
+                "    else:\n",
+                "        print(a, ' ' * (a_l - int(l_n)), i[1], ' ' * (b_l - int(l_n)), b)\n",
                 "\n"
             ]
         },
@@ -76,7 +82,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 10,
+            "execution_count": 13,
             "id": "d590308e",
             "metadata": {},
             "outputs": [
@@ -84,7 +90,7 @@
                     "name": "stdout",
                     "output_type": "stream",
                     "text": [
-                        "2.0 2.0\n"
+                        "2.0 2.23606797749979 2.23606797749979\n"
                     ]
                 }
             ],
@@ -92,15 +98,20 @@
                 "import math\n",
                 "data = [4, 2, 5, 8, 6]\n",
                 "std1 = np.std(data)\n",
-                "def std(datum):\n",
-                "    l = len(datum)\n",
-                "    m = sum(datum)/l\n",
+                "std3 = stats.stdev(data)\n",
+                "def std(datum, study=False):\n",
+                "    if study:\n",
+                "        l = len(datum) - 1\n",
+                "        m = sum(datum) / (l + 1)\n",
+                "    else:\n",
+                "        l = len(datum)\n",
+                "        m = sum(datum)/l\n",
                 "    dev = []\n",
                 "    for i in datum:\n",
-                "        dev.append(abs(m - i)**2)\n",
+                "        dev.append((i - m)**2)\n",
                 "    return math.sqrt(sum(dev)/l)\n",
-                "std2 = std(data)\n",
-                "print(std1, std2)"
+                "std2 = std(data, study=True)\n",
+                "print(std1, std2, std3)"
             ]
         }
     ],
